Migrate from deprecated API